<?xml version="1.0" encoding="utf-8"?>
<resources>

<!-- App -->
    
    <string name="app_name">IPPA</string>
    <string name="connection_status">Unchecked</string>
    <string name="connection_status_description">Device Connection:</string>
    <string name="title_connecting">connecting &#8230;</string>
    <string name="title_connected_to">connected</string>
    <string name="title_not_connected">not connected</string>
    
<!-- Main Activity   --> 

    <string name="title_activity_main">IPPA</string>
    <string name="main_connection_status">Connection status: </string>
    <string name="main_welcome">Welcome to IPPA Mobile</string>
    <string name="voice_command_button">Voice Command</string>
    <string name="teaching_mode_button">Teaching Mode</string>
    <string name="connect_button">Connect</string>
    <string name="voice_speech_init"></string>
    <string name="voice_speech_tittle">Command:    </string>
    <string name="switch_to_teaching_mode">If you continue your IPPA system will switch to Teaching Mode</string>
    
   
<!-- Teaching Mode Main Activity -->
    
    <string name="title_activity_teaching_mode">Teaching Mode</string>
    <string name="switch_to_auto_mode">If you continue you will leave the Teaching Mode, your IPPA system will
        switch to Autonomous Mode</string>
    <string name="title_ippa_full">Could not save the gesture</string>
    <string name="dialog_ippa_full_text">Your IPPA is at full capacity. You must delete
        a gesture before proceeding to save a new one</string>
   
<!-- Demo Gesture Fragment Demo-->
	<string name="title_fragment_demo_gesture">Demo Gesture</string>
	<string name="title_demo_inmobile">Gestures in Mobile</string>
	<string name="title_demo_inarm">Gestures in Arm</string>
	<string name="dialog_title_options">Options</string>
    <string-array name="dialog_demo_inmobile_options">
        <item >Edit </item>
        <item >Transfer to IPPA</item>
        <item >Delete</item>
        <item >Play Gesture</item>
    </string-array>
    <string-array name="dialog_demo_inarm_options">
        <item >Transfer to Phone </item>
        <item >Trigger Gesture</item>
        <item >Delete</item>
    </string-array>
	
<!-- Demo Gesture Fragment Create-->
	<string name="title_fragment_create_gesture">Create Gesture</string>
	<string name="title_gesture_name">Gesture Name:</string>
	<string name="tittle_start_position">Fingers Start Position</string>
	<string name="start_position_option">Change default start position</string>
	<string name="tittle_end_position">Fingers End Position</string>
	<string name="tittle_gesture_settings">Gesture Settings</string>
	<string name="pressure_medium">Medium</string>
	<string name="pressure_high">High</string>
	<string name="tittle_gesture_command">Voice Command:</string>
	<string name="bt_save_gesture">Save</string>
	<string name="bt_reset_gesture">Reset</string>
	<string name="pressure_setting_tittle">Pressure Allowed:</string>
	
	<!-- Position of fingers text -->
	<string name="position_finger1">Thumb</string>
	<string name="position_finger2">Index</string>
	<string name="position_finger3">Middle</string>
	<string name="position_finger4">Ring</string>
	<string name="position_finger5">Pinky</string>

<!-- Bluetooth Connection Setup -->
	<string name="bt_setup_quit">Quit</string>
	<string name="bt_setup_enable_failed_message">The application failed to enable the device\'s bluetooth. 
	    IPPA will not be able to continue executing</string>
	<string name="bt_setup_failed_title">Bluetooth Connection Failed</string>
	
<!-- Help Activity -->
	<string name="title_activity_help">Help</string>
	
<!-- Image Descriptions -->
	<string name="description_line">Line</string>
	
<!-- Top Bar -->
	<string name="help_menu">Help</string>
	
<!-- Dialogs -->
	<string name="confirm_mode_switch">Confirm Mode Switch</string>
	<string name="button_cancel">Cancel</string>
	<string name="button_ok">OK</string>

</resources>
